@@ -1,8 +1,8 @@
 package Entities;
-
+import java.util.ArrayList;
 public class Fighter extends Entity {
     public void specialSkill(){
         this.setHp((int)(getHp() * 1.1));
-        skills.getFirst().setAppliedTurns(5);
+        skills.get(0).setAppliedTurns(5);
     }
 }
